docker configurado com sucesso!!!

--- a/back/appsettings.json
+++ b/back/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Initial Catalog=guialocal;User ID=sa;Password=100_SQLServer;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=127.0.0.1; Database=guialocal; User Id=sa; Password=100_SQLServer; TrustServerCertificate=True"
   },
   "Google": {
     "ApiKey": "AIzaSyBIBkZEexyq3td0QPGZHb9B_-s7-wm6y6I",
