--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,30 +22,25 @@ services:
     restart: always
     working_dir: /app
     environment:
-      - ASPNETCORE_ENVIRONMENT=Developer
-      - ASPNETCORE_HTTP_PORTS=5074
-      - ConnectionStrings__DefaultConnection=Server=localhost;Initial Catalog=guialocal;User ID=sa;Password=100_SQLServer;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+      - ASPNETCORE_URLS=http://*:5074
+      - ConnectionStrings__DefaultConnection=Server=database_sqlserver;Initial Catalog=guialocal;User ID=sa;Password=100_SQLServer;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
       - Google__ApiKey=AIzaSyBIBkZEexyq3td0QPGZHb9B_-s7-wm6y6I
-      - Google__AuthUri=https://accounts.google.com/o/oauth2/v2/auth?scope=email&include_granted_scopes=true&response_type=token&state=state_parameter_passthrough_value&redirect_uri=http://localhost:3001&client_id=975758659668-65l4an4t4tbha9g5bian8dbp85nqspm6.apps.googleusercontent.com
+      - Google__AuthUri=https://accounts.google.com/o/oauth2/v2/auth?scope=email&include_granted_scopes=true&response_type=token&state=state_parameter_passthrough_value&redirect_uri=http://localhost:3001&client_id=975758659668-65l4an4t4tbha9g5bian8dbp85nqspm6.apps.googleusercontent.com    
     volumes:
-      - ./back:/app    
+      - ./back:/app
+      - /app/obj
+      - /app/bin
     expose:
       - 5074
     ports:
       - 5074:5074
-    command: sh -c 'dotnet run'
+    command: sh -c 'dotnet restore && dotnet run'
     depends_on:
       - database
 
-  nginx:
-    container_name: nginx_reverse_proxy
-    image: nginx
-    ports:
-      - 80:80
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - backend
+networks:
+  guialoca-net:
+    driver: bridge
 
 volumes:
   sqlserver_data:
